--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 
 .bloc-cours
 {
+  font-family: Verdana,Arial,sans-serif;
+  font-size: 1em;
   border: 1px solid #d3d3d3;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
   padding: 5px;
 }
 .timer1
